# phd-thesis

./: .gitignore  Bibliography.bib  README.md  classicthesis-config.tex  classicthesis.sty  diss.sublime-project  intelCPU.csv  main.tex  main.xmpdata  pdfa.xmp  pdfx.sty
Bachelorarbeiten/kientopf/: README
Bachelorarbeiten/kientopf/kmeans/: CMakeLists.txt  README  cluster.cpp  kmeans.cpp  kmeans.h  kmeans.skelcl  kmeans_clustering.cpp  kmeans_skelcl.cpp  read_input.cpp
Bachelorarbeiten/kientopf/nw/: CMakeLists.txt  README  lower_right.cl  nw.cpp  nw_skelcl.cpp  upper_left.cl
Bachelorarbeiten/missbach/examples/: CMakeLists.txt
Bachelorarbeiten/missbach/examples/common/: IOHelper.hpp
Bachelorarbeiten/missbach/examples/ludecomposition/: CMakeLists.txt
Bachelorarbeiten/missbach/examples/ludecomposition/blud/: CMakeLists.txt  diagonal.cl  interior.cl  main.cpp  perimeter.cl
Bachelorarbeiten/missbach/examples/ludecomposition/lud/: CMakeLists.txt  main.cpp
Bachelorarbeiten/missbach/examples/ludecomposition/lud/doc/: LUDecomposition_Kernels.cl  README
Bachelorarbeiten/missbach/examples/ludecomposition/sclud/: CMakeLists.txt  main.cpp
Bachelorarbeiten/missbach/examples/mersenne_twister/: CMakeLists.txt  amd_mersenne_twister.cl  main.cpp  new_mersenne_twister.cl
Bachelorarbeiten/missbach/examples/mersenne_twister/doc/: MersenneTwister_Kernels.cl  README
Bachelorarbeiten/schiffler/examples/: CMakeLists.txt
Bachelorarbeiten/schiffler/examples/b+tree/: CMakeLists.txt  common.h  main.h  main_opencl.cpp  main_skelcl.cpp  run
Bachelorarbeiten/schiffler/examples/b+tree/kernel/: kernel_gpu_opencl.cl  kernel_gpu_opencl_wrapper.cpp  kernel_gpu_opencl_wrapper.h  kernel_gpu_opencl_wrapper_2.cpp  kernel_gpu_opencl_wrapper_2.h  kernel_gpu_skelcl.cl  kernel_gpu_skelcl_wrapper.cpp  kernel_gpu_skelcl_wrapper.h
Bachelorarbeiten/schiffler/examples/jacobi_stencil/: CMakeLists.txt  kernel_mat.cl  kernel_mat_IndexMatrix.cl  kernel_mo.cl  kernel_vec.cl  main_mat.cpp  main_mat_IndexMatrix.cpp  main_mo.cpp  main_vec.cpp
Chapters/: Chapter01.tex  Chapter02.tex  Chapter03.tex  Chapter04.tex  Chapter0A.tex  Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  Chapter7.tex  Chapter8.tex  ChapterA.tex
Chapters/Chapter1/: abstract.tex
Chapters/Chapter2/: related_work.tex
Chapters/Chapter3/: need_for_high-level.tex  skelcl_library.tex  skelcl_programming_model.tex
Chapters/Chapter4/: bio_info.tex  experimental_setup.tex  fdtd.tex  linear_algebra.tex  mandelbrot.tex  matrix_matrix_multiplication.tex  medical_imaging.tex  stencil.tex
Chapters/Chapter5/: generator.tex  motivation.tex  overview.tex  patterns.tex  rules.tex
Figures/: CPU.graffle  GPU.graffle  OpenCL.graffle  ReduceTree.graffle  Reorder.graffle  SkelCLOverview.graffle  ThreadHierarchy.graffle  lenaStencil.graffle
Figures/ASHES/: blockDistribution.tex  copyDistribution.tex  lmosemIteration.ograph  lmosem_distribution.tex  loc.ograph  scan.tex  singleDistribution.tex
Figures/HIPS/: ChartLmosem.ograph  ChartMandelbrot.ograph
Figures/HLPP/: allpairs_access_pattern.tex  allpairs_access_pattern_alternative.tex  memory_access.tex  mm.tex  multi_gpu.tex  single_memory_access.tex
Figures/HiStencils/: blockDistribution.tex  heat_transfer.graffle
Figures/ICCS/: copyDistribution.tex  em_distribution.tex  overlapDistribution.tex  singleDistribution.tex
Figures/PLDI/: amd_search.csv  application_results.csv  application_results_vs_BEST.R  application_results_vs_BEST_intel.R  application_results_vs_BEST_nv.R  first.r  first_results_amd.R  gpgpu.eps  highlevel.eps  nv_search.R  nv_search_sorted.csv
Figures/PLDI/libs/: newlegend.R
Figures/PLDI2015/: amd_search.R  amd_search_sorted.csv  application_results_amd.R  application_results_nv.R  application_results_vs_MKL_intel.R  first_results_nv.R  intel_search.R  intel_search.csv  intel_search_sorted.csv  nv_search.csv
Figures/PPoPP/: application_results_intel.R  application_results_vs_BEST_amd.R  application_results_vs_clBLAS.R  first_results.R  first_results.csv  overview.eps  results.csv
Figures/PaCT/: blockDistribution_matrix.tex  blockDistribution_vector.tex  copyDistribution_matrix.tex  copyDistribution_vector.tex  overlapDistribution_matrix.tex  overlapDistribution_vector.tex  singleDistribution_matrix.tex  singleDistribution_vector.tex
Figures/Paraphrase/: blockDistribution.tex  copyDistribution.tex  overlapDistribution.tex  singleDistribution.tex
Figures/Plots/Asum/: asum.R  asum.csv  loc.R  loc.csv
Figures/Plots/BlackScholes/: results.csv  speedup.r
Figures/Plots/Canny/: runtime.csv  runtime.r
Figures/Plots/DotProduct/: dotProduct.R  dotProduct.csv  loc.R  loc.csv
Figures/Plots/FDTD/: runtime.csv  runtime.r
Figures/Plots/LA/: clBlas.csv  clBlas.r  newlegend.R  results.csv  results.r
Figures/Plots/LMOSEM/: loc.csv  loc.r  runtime.csv  runtime.r
Figures/Plots/MD/: results.csv  speedup.r
Figures/Plots/Mandelbrot/: results.csv  results.r
Figures/Plots/gauss/: loc.csv  (+5 more)
FrontBackMatter/: Abstract.md  Abstract.md.tex  Abstract.tex  Acknowledgments.tex  Bibliography.tex  CV.tex  Colophon.tex  Contents.tex  Declaration.tex  Index.tex  Listings.tex  Publication.tex  Titleback.tex  Titlepage.tex
(+46 files in other folders)
